# Raspbian_Agent

./: README.md
dashboard_login/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  init.sql
dashboard_login/fastapiserver/: Dockerfile  detection_model.py  main.py  requirements.txt
dashboard_login/socket_serv/: Cargo.toml  Dockerfile
dashboard_login/socket_serv/src/: main.rs
dashboard_login/src/: main.rs
dashboard_login/static/: script.js
dashboard_login/static/css/: style.css  style2.css
dashboard_login/templates/: dashboard.html.tera  detection.html.tera  login.html.tera
raspberrypi_scripts/: network_connect.sh  streaming.sh  websocket.py
