[package]
name = "rocket-login"
version = "0.1.0"
edition = "2021"
[dependencies]
rocket = { version = "0.5.1", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.15.0"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
tokio-tungstenite = "0.20"
tungstenite = "0.20"
url = "2.5"
futures-util = "0.3"
